# thunder-bug

./: Dockerfile.host-build  README.md  build.sh  dependencies.txt  run.sh
src/drone_rl/: deps.txt  package.xml  setup.py
src/drone_rl/drone_rl/: drone_env.py  run_env.py
src/gate_detection/: package.xml  setup.cfg  setup.py
src/gate_detection/gate_detection/: .train.py.swp  gate_detector_node.py  train.py  unet.py
src/gate_msgs/: CMakeLists.txt  package.xml
src/gate_msgs/msg/: Gate.msg  GateArray.msg
src/gate_publisher/: CMakeLists.txt  package.xml
src/gate_publisher/src/: gate_publisher.cpp
src/joy_control/: CMakeLists.txt  package.xml
src/joy_control/src/: joy_to_motor.cpp  main.cpp
src/quadrotor_sim/: CMakeLists.txt  package.xml
src/quadrotor_sim/include/quadrotor_sim/: battery_model.hpp  quadrotor_sim_node.hpp
src/quadrotor_sim/launch/: quadrotor_sim.launch.py
src/quadrotor_sim/src/: gate_publisher.cpp  main.cpp  quadrotor_sim_node.cpp
src/racetrack/: CMakeLists.txt  package.xml
src/racetrack/config/: racetrack1.yaml  racetrack2.yaml
src/racetrack/launch/: quadrotor_sim.launch.py
src/racetrack/src/: racetrack.cpp
src/ros2_msgs/: CMakeLists.txt  package.xml
src/ros2_msgs/msg/: GateArray.msg  JoyControl.msg  MotorCommands.msg
src/ros2_msgs/srv/: RaceTrack.srv
