<?xml version="1.0"?>
<package format="3">
  <name>ros2_msgs</name>
  <version>0.0.1</version>
  <description>Custom message definitions for quadrotor gate environment</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>'

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

